test/unit-tests/errors/contents-match-error.spec.d.ts
export declare class ContentsMatchErrorTests {
    shouldMatchMessage(container: any, expectedContent: any): void;
    shouldNotMatchMessage(container: any, expectedContent: any): void;
    actualValueContainsTheContainer(container: any): void;
    expectedValueContainsTheExpectedContent(expectedContent: any): void;
}
